--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     },
     "autoload": {
         "psr-4": {
-            "malamalca\\qr_code\\": "./src",
-            "malamalca\\tests\\": "./tests"
+            "KrivArt\\QrCode\\": "./src",
+            "KrivArt\\Tests\\": "./tests"
         }
     },
     "require-dev": {
